Fixed email form

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 						message: form["demo-message"].value
 					};
 				
-					emailjs.send("m7t2r4ztbPG_7ugP-", "template_stzresumewebsite", formData)
+					emailjs.send("service_lhwknnd", "template_stzresumewebsite", formData)
 					.then(() => {
 						document.getElementById("form").reset();
 						document.getElementById("thank-you-popup").style.display = "block";
