Fixed public key

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			<script type="text/javascript">
 				(function(){
 					emailjs.init({
-						publicKey: "m7t2r4ztbPG_7ugP",
+						publicKey: "m7t2r4ztbPG_7ugP-",
 					});
 				})();
 			</script>
