Reorganized page structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 					<!-- Services Table -->
 					<section id="two">
 						<h2>Services</h2>
-						<p><strong>All requests will be reviewed.</strong> Once reviewed, I will reach out to you with availability to schedule time to meet.</p>
 						
 						<h3>Bundles</h3>
 						<ul>
@@ -102,6 +101,8 @@
 								</tbody>
 							</table>
 						</div>
+						
+					<p><strong>All requests will be reviewed. Once reviewed, I will reach out to you with availability to schedule time to meet.</strong></p>
 					</section>
 					<!-- End Services Table -->
 
