--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 						<h3>Bundles</h3>
 						<ul>
 							<li><strong>Resume + Cover Letter</strong> – $85 <em>(save $15)</em></li>
-							<li><strong>Resume + LinkedIn Overhaul</strong> – $110 <em>(save $15)</em></li>
-							<li><strong>Resume + Cover Letter + LinkedIn Overhaul</strong> – $150 <em>(save $25)</em></li>
-							<li><strong>Full Package</strong> (Resume, Cover Letter, LinkedIn Overhaul, and Resume Review) – $175 <em>(save $40)</em></li>
+							<li><strong>Resume + LinkedIn Overhaul</strong> – $85 <em>(save $15)</em></li>
+							<li><strong>Full Package</strong> – $125 <em>(save $25)</em></li>
 						</ul>
 						<div class="table-wrapper">
 							<table>
